mutants.out/log/src__lexer.rs_line_78_col_5_001.log

*** src/lexer.rs:78:5: replace tokenize -> Vec<Token<'_>> with vec![Default::default()]

*** mutation diff:
--- src/lexer.rs
+++ replace tokenize -> Vec<Token<'_>> with vec![Default::default()]
@@ -70,18 +70,10 @@
     pub kind: TokenKind,
     pub text: &'src str,
 }
 
 /// Lex `src` into a lossless token stream: `tokenize(src).iter().map(|t| t.text).collect::<String>()`
 /// equals `src` for every input. A byte logos cannot classify becomes a [`TokenKind::Unknown`]
 /// token carrying that slice rather than being dropped.
 pub fn tokenize(src: &str) -> Vec<Token<'_>> {
-    let mut lex = TokenKind::lexer(src);
-    let mut out = Vec::new();
-    while let Some(result) = lex.next() {
-        out.push(Token {
-            kind: result.unwrap_or(TokenKind::Unknown),
-            text: lex.slice(),
-        });
-    }
-    out
+    vec![Default::default()] /* ~ changed by cargo-mutants ~ */
 }


*** /home/jp/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --package=cfmt@0.1.0
       Fresh libc v0.2.186
       Fresh cfg-if v1.0.4
       Fresh unicode-ident v1.0.24
       Fresh regex-syntax v0.8.11
       Fresh memchr v2.8.2
       Fresh fnv v1.0.7
       Fresh autocfg v1.5.1
       Fresh linux-raw-sys v0.12.1
       Fresh bitflags v2.13.0
       Fresh fastrand v2.4.1
       Fresh once_cell v1.21.4
       Fresh wait-timeout v0.2.1
       Fresh bit-vec v0.8.0
       Fresh quick-error v1.2.3
       Fresh unarray v0.1.4
       Fresh aho-corasick v1.1.4
       Fresh bit-set v0.8.0
       Fresh proc-macro2 v1.0.106
       Fresh getrandom v0.3.4
       Fresh regex-automata v0.4.14
       Fresh zerocopy v0.8.52
       Fresh rustix v1.1.4
       Fresh getrandom v0.4.3
       Fresh quote v1.0.46
       Fresh rand_core v0.9.5
       Fresh tempfile v3.27.0
       Fresh ppv-lite86 v0.2.21
       Fresh num-traits v0.2.19
       Fresh syn v2.0.118
       Fresh rusty-fork v0.3.1
       Fresh rand_chacha v0.9.0
       Fresh rand_xorshift v0.4.0
       Fresh rand v0.9.4
       Fresh logos-codegen v0.16.1
       Fresh proptest v1.11.0
       Fresh logos-derive v0.16.1
       Fresh logos v0.16.1
       Dirty cfmt v0.1.0 (/tmp/cargo-mutants-c-format-BJPT2E.tmp): the file `src/lexer.rs` has changed (1782619760.453342479s, 1s after last build at 1782619759.830990528s)
   Compiling cfmt v0.1.0 (/tmp/cargo-mutants-c-format-BJPT2E.tmp)
     Running `/home/jp/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin/rustc --crate-name cfmt --edition=2024 src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 '--warn=clippy::pedantic' --forbid=unsafe_code '--allow=clippy::too_many_lines' '--allow=clippy::similar_names' '--allow=clippy::must_use_candidate' '--allow=clippy::assigning_clones' --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=a4b1a2cc4d498b46 -C extra-filename=-a84e12700bb01142 --out-dir /tmp/cargo-mutants-c-format-BJPT2E.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-c-format-BJPT2E.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-c-format-BJPT2E.tmp/target/debug/deps --extern logos=/tmp/cargo-mutants-c-format-BJPT2E.tmp/target/debug/deps/liblogos-4c6e00a209650053.rlib --extern proptest=/tmp/cargo-mutants-c-format-BJPT2E.tmp/target/debug/deps/libproptest-f3a23dcc63ec6135.rlib`
     Running `/home/jp/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin/rustc --crate-name cfmt --edition=2024 src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 '--warn=clippy::pedantic' --forbid=unsafe_code '--allow=clippy::too_many_lines' '--allow=clippy::similar_names' '--allow=clippy::must_use_candidate' '--allow=clippy::assigning_clones' --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=3f53573a9b6bab2f -C extra-filename=-99f850ce46e24a52 --out-dir /tmp/cargo-mutants-c-format-BJPT2E.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-c-format-BJPT2E.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-c-format-BJPT2E.tmp/target/debug/deps --extern logos=/tmp/cargo-mutants-c-format-BJPT2E.tmp/target/debug/deps/liblogos-4c6e00a209650053.rmeta`
error[E0277]: the trait bound `Token<'_>: Default` is not satisfied
  --> src/lexer.rs:78:10
   |
78 |     vec![Default::default()] /* ~ changed by cargo-mutants ~ */
   |          ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `Default` is not implemented for `Token<'_>`
  --> src/lexer.rs:69:1
   |
69 | pub struct Token<'src> {
   | ^^^^^^^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0277`.
error: could not compile `cfmt` (lib test) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/jp/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin/rustc --crate-name cfmt --edition=2024 src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 '--warn=clippy::pedantic' --forbid=unsafe_code '--allow=clippy::too_many_lines' '--allow=clippy::similar_names' '--allow=clippy::must_use_candidate' '--allow=clippy::assigning_clones' --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=a4b1a2cc4d498b46 -C extra-filename=-a84e12700bb01142 --out-dir /tmp/cargo-mutants-c-format-BJPT2E.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-c-format-BJPT2E.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-c-format-BJPT2E.tmp/target/debug/deps --extern logos=/tmp/cargo-mutants-c-format-BJPT2E.tmp/target/debug/deps/liblogos-4c6e00a209650053.rlib --extern proptest=/tmp/cargo-mutants-c-format-BJPT2E.tmp/target/debug/deps/libproptest-f3a23dcc63ec6135.rlib` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error: could not compile `cfmt` (lib) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/jp/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin/rustc --crate-name cfmt --edition=2024 src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 '--warn=clippy::pedantic' --forbid=unsafe_code '--allow=clippy::too_many_lines' '--allow=clippy::similar_names' '--allow=clippy::must_use_candidate' '--allow=clippy::assigning_clones' --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=3f53573a9b6bab2f -C extra-filename=-99f850ce46e24a52 --out-dir /tmp/cargo-mutants-c-format-BJPT2E.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-c-format-BJPT2E.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-c-format-BJPT2E.tmp/target/debug/deps --extern logos=/tmp/cargo-mutants-c-format-BJPT2E.tmp/target/debug/deps/liblogos-4c6e00a209650053.rmeta` (exit status: 1)

*** result: Failure(101)
